--- a/bib/phd_bib.bib
+++ b/bib/phd_bib.bib
@@ -251,7 +251,7 @@ Thermoacoustic Energy Conversion (\textsc{DeltaEC})}},
 	location = {Glasgow, Royaume Uni},
 	title = {Thermoacoustic refrigeration for ice cream sales},
 	eventtitle = {6th {IIR} Gustav Lorentzen conference},
-	author = {Poese, Matthew E and Smith, Robert W M and Garrett, Steven L and van Gerwen, Rene and Gosselin, Pete},
+	author = {Poese, Matthew E. and Smith, Robert W. M. and Garrett, Steven L. and van Gerwen, Rene and Gosselin, Pete},
 	date = {2004},
 	langid = {english},
 	file = {Poese et al. - Thermoacoustic refrigeration for ice cream sales.pdf:C\:\\Users\\mfontbon\\Desktop\\sDrive\\Zotero\\storage\\Z6CZ74SR\\Poese et al. - Thermoacoustic refrigeration for ice cream sales.pdf:application/pdf},
