--- a/fig/fig_PerfConvNat/tex/fig_PerfConvNat_0W_Tf.tex
+++ b/fig/fig_PerfConvNat/tex/fig_PerfConvNat_0W_Tf.tex
@@ -1,4 +1,4 @@
-\begin{tikzpicture}[every mark/.append style={mark size=5pt, line width=2pt}]
+\begin{tikzpicture}[every mark/.append style={line width=2pt}]
 	\def\width{.9*\textwidth};
 	\def\height{\width};
 	
@@ -9,33 +9,24 @@
 	    xmin=.1,xmax=3.8,
 		xlabel={$DR$ [\unit{\percent}]},
 		ylabel={$T_f$ [\unit{\kelvin}]},
-		legend style = {at={(0,1.02)}, anchor=south west, rounded corners, legend columns=4,},
+		legend style = {at={(.98,.98)}, anchor=north east, rounded corners, legend columns=2,},
 		legend cell align={left},
-		legend entries={`\texttt{V1}', `\texttt{V2}',
-		`\texttt{H1}', `\texttt{H2}',
-		{Expé.}, {Simu.}
-		}
+%		legend entries={`\texttt{V1}', `\texttt{V2}',
+%		`\texttt{H1}', `\texttt{H2}',
+%		{Expé.}, {Simu.}
+%		}
 	]
 	
-	\addlegendimage{only marks, mark=*, color=MatlabBlue}
-	\addlegendimage{only marks, mark=*, color=MatlabOrange}
+	\addplot[only marks, mark=*,color=Plasma1, mark size=5pt] file {../fig/fig_PerfConvNat/data/V1_Tf_DR_Qc0.txt};\addlegendentry{`\texttt{V1}'};
+	\addplot[only marks, mark=*,color=Plasma25, mark size=4pt] file {../fig/fig_PerfConvNat/data/V2_Tf_DR_Qc0.txt};\addlegendentry{`\texttt{V2}'};
+	\addplot[only marks, mark=*,color=Plasma50, mark size=3pt] file {../fig/fig_PerfConvNat/data/H1_Tf_DR_Qc0.txt};\addlegendentry{`\texttt{H1}'};
+	\addplot[only marks, mark=*,color=Plasma75, mark size=2pt] file {../fig/fig_PerfConvNat/data/H2_Tf_DR_Qc0.txt};\addlegendentry{`\texttt{H2}'};
 	
-	\addlegendimage{only marks, mark=*, color=MatlabYellow}
-	\addlegendimage{only marks, mark=*, color=MatlabPurple}
+	\addlegendimage{only marks, mark=square*, mark size=5pt}
+	\addlegendentry{Expé.}
 	
-	\addlegendimage{only marks, mark=square*}
-	\addlegendimage{only marks, mark=square}
-
-%	\addlegendimage{only marks, mark=o}	
-%	\addlegendimage{only marks, mark=triangle}
-%	\addlegendimage{only marks, mark=diamond}
-
-	
-	\addplot[only marks, mark=*,color=MatlabBlue] file {../fig/fig_PerfConvNat/data/V1_Tf_DR_Qc0.txt};%\addlegendentry{`\texttt{V1}'};
-	\addplot[only marks, mark=*,color=MatlabOrange] file {../fig/fig_PerfConvNat/data/V2_Tf_DR_Qc0.txt};%\addlegendentry{`\texttt{V2}'};
-	\addplot[only marks, mark=*,color=MatlabYellow] file {../fig/fig_PerfConvNat/data/H1_Tf_DR_Qc0.txt};%\addlegendentry{`\texttt{H1}'};
-	\addplot[only marks, mark=*,color=MatlabPurple] file {../fig/fig_PerfConvNat/data/H2_Tf_DR_Qc0.txt};%\addlegendentry{`\texttt{H2}'};
-	
+	\addlegendimage{only marks, mark=square, mark size=5pt}
+	\addlegendentry{Simu.}
 
 	\end{axis}
 \end{tikzpicture}
