--- a/fig/fig_WaterOnlyExample/tex/fig_WaterOnly_TC.tex
+++ b/fig/fig_WaterOnlyExample/tex/fig_WaterOnly_TC.tex
@@ -16,15 +16,15 @@
     legend style = {at={(1.01,1.05)},anchor = north east, cells={align=right},rounded corners},legend columns=5,
     ]
     	
-    	\addplot[ultra thick,MatlabBlue] file {{../fig/fig_WaterOnlyExample/data/Water_TC2.txt}};\addlegendentry{TC 2}
+    	\addplot[ultra thick,Plasma85] file {{../fig/fig_WaterOnlyExample/data/Water_TC2.txt}};\addlegendentry{TC 2}
     	
-    	\addplot[ultra thick,MatlabOrange] file {{../fig/fig_WaterOnlyExample/data/Water_TC5.txt}};\addlegendentry{TC 5}
+    	\addplot[ultra thick,Plasma64] file {{../fig/fig_WaterOnlyExample/data/Water_TC5.txt}};\addlegendentry{TC 5}
     	
-    	\addplot[ultra thick,MatlabYellow] file {{../fig/fig_WaterOnlyExample/data/Water_TC8.txt}};\addlegendentry{TC 8}
+    	\addplot[ultra thick,Plasma43] file {{../fig/fig_WaterOnlyExample/data/Water_TC8.txt}};\addlegendentry{TC 8}
     	
-    	\addplot[ultra thick,MatlabPurple] file {{../fig/fig_WaterOnlyExample/data/Water_TC11.txt}};\addlegendentry{TC 11}
+    	\addplot[ultra thick,Plasma22] file {{../fig/fig_WaterOnlyExample/data/Water_TC11.txt}};\addlegendentry{TC 11}
     	
-    	\addplot[ultra thick,MatlabGreen] file {{../fig/fig_WaterOnlyExample/data/Water_TC14.txt}};\addlegendentry{TC 14}
+    	\addplot[ultra thick,Plasma1] file {{../fig/fig_WaterOnlyExample/data/Water_TC14.txt}};\addlegendentry{TC 14}
     	  
     \end{axis}
 %    \draw (plot.center) node[rotate=30]{\color{red}AFFICHER LES DONNEES};
