--- a/tex/EtudeExperimentale.tex
+++ b/tex/EtudeExperimentale.tex
@@ -7,7 +7,7 @@ Lors des expériences réalisées lors de la caractérisation du réfrigérateur
 \section{\'Etude des performances}
 Pour commencer cette étude expérimentale, une vue d'ensemble est adoptée. En faisant abstraction de la distribution de température non encore expliquée, des quantités telles que la capacité de refroidissement de l'échangeur froid $Q_f$ et la chaleur extraite par l'échangeur ambiant $Q_a$, le coefficient de performance $\COP=Q_f/W_e$ rapporté au coefficient de performance de Carnot $\COP_{\sf carnot} = T_f/(T_a-T_f)$ ou les température froide $T_f$ et ambiante $T_a$ sont relevées. Pour cette partie de l'étude, plusieurs hypothèses sont proposées : les températures sont supposées constantes sur la section du noyau, et les échangeurs sont considérés parfaits avec un flux thermique homogène sur la section. 
 
-Dans cette étude, les quatre orientations définies sur les figures~\ref{fig:OrientationCore_H} et \ref{fig:OrientationCore_V} sont tour à tour mises en place. Pour chacune, des expériences sont réalisées en suivant le protocole défini dans la partie~\ref{chap:MesureAvecAcou}, cette fois en réglant les charges thermiques $\dot Q_f$ de \qtylist{50;100}{\watt}. Les résultats des expériences tracés sur les figures~\ref{fig:PerfConvNat_0W} à \ref{fig:PerfConvNat_100W} proviennent du tableau~\ref{tab:RecapResultExpe}.\medskip
+Dans cette étude, les quatre orientations définies sur les schémas de la figure~\ref{fig:OrientationCore} sont tour à tour mises en place. Pour chacune, des expériences sont réalisées en suivant le protocole défini dans la partie~\ref{chap:MesureAvecAcou}, cette fois en réglant les charges thermiques $\dot Q_f$ de \qtylist{50;100}{\watt}. Les résultats des expériences tracés sur les figures~\ref{fig:PerfConvNat_0W} à \ref{fig:PerfConvNat_100W} proviennent du tableau~\ref{tab:RecapResultExpe}.\medskip
 
 
 %\begin{figure}[!ht]
@@ -129,7 +129,7 @@ Dans cette étude, les quatre orientations définies sur les figures~\ref{fig:Or
 		\caption{}
 		\label{fig:PerfConvNat_50W_COP}
 	\end{subfigure}	     
-    \caption{Influence de la convection naturelle sur les performances sur différents indicateur, pour une charge thermique $Q_f=\qty{50}{\watt}$ : \subref{fig:PerfConvNat_50W_Tf} température froide $T_f$, \subref{fig:PerfConvNat_50W_Ta} température ambiante~$T_a$, \subref{fig:PerfConvNat_50W_Qa} quantité de chaleur extraite du côté ambiant $\dot Q_a$, et \subref{fig:PerfConvNat_50W_COP} le coefficient de performance rapporté à Carnot. Les températures indiquées représentent l'évolution depuis l'état avant le démarrage des sources acoustiques. Les couleurs indiquent l'orientation et le remplissage, si le résultat est obtenu expérimentalement ou par une simulation \textsc{DeltaEC}.\echaf{ajouter valeurs DeltaEC}}
+    \caption{Influence de la convection naturelle sur les performances sur différents indicateur, pour une charge thermique $Q_f=\qty{50}{\watt}$ : \subref{fig:PerfConvNat_50W_Tf} température froide $T_f$, \subref{fig:PerfConvNat_50W_Ta} température ambiante~$T_a$, \subref{fig:PerfConvNat_50W_Qa} quantité de chaleur extraite du côté ambiant $\dot Q_a$, et \subref{fig:PerfConvNat_50W_COP} coefficient de performance rapporté à Carnot. Les températures indiquées représentent l'évolution depuis l'état avant le démarrage des sources acoustiques. Les couleurs indiquent l'orientation et le remplissage, si le résultat est obtenu expérimentalement ou par une simulation \textsc{DeltaEC}.\echaf{ajouter valeurs DeltaEC}}
     \label{fig:PerfConvNat_50W}
 \end{figure}
 
@@ -281,7 +281,7 @@ ce qui se trouve deux ordres de grandeur au dessus de la valeur de Rayleigh crit
 \end{subequations}
 dans le cas d'une différence de température de \qty{1}{\degreeCelsius}, soit une différence de température bien plus faible que celles obtenus pour toutes les expériences. Cette différence de température apparaît après le démarrage du réfrigérateur, suite au refroidissement du côté froid du régénérateur et celui dans une moindre mesure --- voire inexistant --- de la source acoustique principale située en face, à l'autre extrémité du cône d'adaptation d'impédance.
 
-Les quatre orientations présentées sur la figure~\ref{fig:OrientationCore_H} et \ref{fig:OrientationCore_V} sont regroupées par deux, avec d'une part les orientations horizontales du \textsc{Tacot} `\texttt{H1}' et `\texttt{H2}' où $\psi_v=\ang{0}$ (sous-figures~\subref{fig:OrientationCore_H1} et \subref{fig:OrientationCore_H2}), et d'autre part les orientations verticales `\texttt{V1}' et `\texttt{V2}' pour lesquelles $\psi_v=\pm\ang{90}$ (sous-figures~\subref{fig:OrientationCore_V1} et \subref{fig:OrientationCore_V2}). Pour chacun de ces groupes, les résultats des expériences réalisées aux trois amplitudes décrites dans le paragraphe~§\ref{chap:MesureAvecAcou} sont présentés sur les figures~\ref{fig:HeatOnly_CHXout_H1H2} -- \ref{fig:Acou_CHXout_H1H2_High} et \ref{fig:HeatOnly_CHXout_V1V2} -- \ref{fig:Acou_CHXout_V1V2_High}, respectivement pour les orientations horizontales et verticales. Pour rappel, la temperature initiale de chaque thermocouple est soustraite dans toutes les mesures qui suivent. De plus, les mesures sont rognées de \qtyrange{0}{3500}{\second} pour que la définition du régime stationnaire soit la même pour tous les résultats (sauf dans le cas du \textsc{Tacot} horizontal à moyenne amplitude acoustique, où un problème d'acquisition contraint le découpage de \qtyrange{0}{2700}{\second}). Un rééchantillonnage à \qty{.1}{\hertz} est également appliqué aux mesures de températures pour limiter la dimension des fichiers de données.
+Les quatre orientations représentées sur la figure~\ref{fig:OrientationCore} sont regroupées par deux, avec d'une part les orientations horizontales du \textsc{Tacot} `\texttt{H1}' et `\texttt{H2}' (sous-figures~\subref{fig:OrientationCore_H1} et \subref{fig:OrientationCore_H2}), et d'autre part les orientations verticales `\texttt{V1}' et `\texttt{V2}' (sous-figures~\subref{fig:OrientationCore_V1} et \subref{fig:OrientationCore_V2}). Pour chacun de ces groupes, les résultats des expériences réalisées aux trois amplitudes décrites dans le paragraphe~§\ref{chap:MesureAvecAcou} sont présentés sur les figures~\ref{fig:HeatOnly_CHXout_H1H2} -- \ref{fig:Acou_CHXout_H1H2_High} et \ref{fig:HeatOnly_CHXout_V1V2} -- \ref{fig:Acou_CHXout_V1V2_High}, respectivement pour les orientations horizontales et verticales. Pour rappel, la temperature initiale de chaque thermocouple est soustraite dans toutes les mesures qui suivent. De plus, les mesures sont rognées de \qtyrange{0}{3500}{\second} pour que la définition du régime stationnaire soit la même pour tous les résultats (sauf dans le cas du \textsc{Tacot} horizontal à moyenne amplitude acoustique, où un problème d'acquisition contraint le découpage de \qtyrange{0}{2700}{\second}). Un rééchantillonnage à \qty{.1}{\hertz} est également appliqué aux mesures de températures pour limiter la dimension des fichiers de données.
 
 \subsubsection{Réfrigérateur horizontal}
 Pour rappel, le réfrigérateur est placé à l'horizontal dans ces expériences. Les notations suivantes sont introduites pour cette partie concernant les expériences `\texttt{H1}' et `\texttt{H2}' :
