--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -1,5 +1,5 @@
 %---------------------------------------------------------------------%
-\documentclass[a4paper,10pt]{book}
+\documentclass[a4paper,11pt]{book}
 %\documentclass[a4paper,12pt]{report}
 %---------------------------------------------------------------------%
 % MODIFY TEXT APPEARANCE
@@ -157,6 +157,9 @@
 	\definecolor{PlasmaPink}{HTML}{CA4678}
 	\definecolor{PlasmaOrange}{RGB}{247,147,65}
 	\definecolor{PlasmaYellow}{HTML}{EFF821}
+	%----------------------------------
+	\input{Plasma}
+	\input{Inferno}
 % -----------------------------------------------------
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -169,6 +172,7 @@
 \usepackage{mathtools}
 \usepackage{nicefrac}
 \usepackage{bm}
+\usepackage{mwe}
 \usepackage{graphicx}% Include figure files
 \usepackage{subcaption}
 	\renewcommand\thesubfigure{(\alph{subfigure})}
@@ -322,7 +326,7 @@
 %}
     \vfill
 %        \hrule\leavevmode\\[0.3cm]
-        \textbf{\'Etude de l'impact de la convection naturelle sur la distribution de température dans le noyau d'une pompe à chaleur thermoacoustique compacte coaxiale} %\\[0.65cm]
+        \textbf{\Large \'Etude de l'impact de la convection naturelle sur la distribution de température dans le noyau d'une pompe à chaleur thermoacoustique compacte coaxiale} %\\[0.65cm]
 %        \hrule
     \vfill
 %{\normalsize
